--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.topBar{
+.main-container{
   display: flex;
-  background-color: red;
+  flex-direction: column;
   height: 100%;
   width: 100%;
 }
